fix banner on mobile

--- a/less/banner.less
+++ b/less/banner.less
@@ -12,6 +12,9 @@
 	@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
 			height:772px;
 	}
+	@media only screen and (max-width:500px) {
+		height:350px;
+	}
 	.container {
 			padding:30px 40px 40px;
 	.text{
@@ -61,6 +64,10 @@
 		width:auto;
 		height:100%;
 		max-height: 600px;
+	}
+	@media only screen and (max-width:500px) {
+			width:auto;
+			max-height:300px;
 	}
 }
 }
